<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Nathan Cool -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:baselineAligned="false"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="edu.iastate.pal.LoginActivity">

    <ScrollView
        android:background="@color/colorGenericWhite"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <ImageView
                android:contentDescription="@string/s_global_imageView_appIcon_accessibilityDescription"
                android:layout_gravity="center"
                android:layout_height="@dimen/activity_login_imageView_appIcon_height"
                android:layout_width="@dimen/activity_login_imageView_appIcon_width"
                android:src="@mipmap/ic_launcher"/>

            <View
                android:layout_height="@dimen/activity_divider_height"
                android:layout_width="match_parent"/>

            <TextView
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/s_global_app_name"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/activity_login_textView_title_textSize"/>

            <TextView
                android:fontFamily="san-serif"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/s_activity_login_textView_subTitle"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/activity_login_textView_subTitle_textSize"/>

            <View
                android:layout_height="@dimen/activity_divider_height"
                android:layout_width="match_parent"/>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:fontFamily="sans-serif"
                    android:hint="@string/s_generic_word_username"
                    android:id="@+id/activity_login_editText_username"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/activity_login_editText_padding"
                    android:paddingStart="@dimen/activity_login_editText_padding"
                    android:textColor="@color/colorTextPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="@dimen/activity_login_editText_textSize"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_height="@dimen/activity_divider_height"
                android:layout_width="match_parent"/>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:fontFamily="sans-serif"
                    android:hint="@string/s_generic_word_password"
                    android:id="@+id/activity_login_editText_password"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/activity_login_editText_padding"
                    android:paddingStart="@dimen/activity_login_editText_padding"
                    android:textColor="@color/colorTextPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="@dimen/activity_login_editText_textSize" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_height="@dimen/activity_divider_height"
                android:layout_width="match_parent"/>

            <Button
                android:background="@drawable/shape_round_button_accent"
                android:fontFamily="sans-serif"
                android:id="@+id/activity_login_button_login"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/s_generic_word_signIn"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/activity_login_button_login_textSize"/>

            <View
                android:layout_height="@dimen/activity_divider_height"
                android:layout_width="match_parent"/>

            <TextView
                android:fontFamily="sans-serif"
                android:id="@+id/activity_login_textView_createAccount"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/s_activity_login_textView_createAccount"
                android:textColor="@color/colorGenericRed"
                android:textSize="@dimen/activity_login_textView_createAccount_textSize"/>

            <View
                android:layout_height="@dimen/activity_divider_height"
                android:layout_width="match_parent"/>

            <TextView
                android:fontFamily="sans-serif"
                android:id="@+id/activity_login_textView_forgotCredentials"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/s_activity_login_textView_forgotPassword"
                android:textColor="@color/colorGenericRed"
                android:textSize="@dimen/activity_login_textView_forgotCredentials_textSize"/>

            <View
                android:layout_height="@dimen/activity_divider_height"
                android:layout_width="match_parent"/>

            <ImageView
                android:contentDescription="@string/s_activity_login_contendDescription_aboutDevelopers"
                android:id="@+id/activity_login_button_aboutDevelopers"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@android:drawable/ic_menu_help"
                android:tint="@color/colorAccent"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
