<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_newcourse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.iastate.pal.NewCourseActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_newCourse_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_newcourse_courseNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_newCourse_courseName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#E0E0E0"
                    android:hint="@string/s_activity_newcourse_courseNameField"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_newcourse_professorNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_newCourse_professorName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#E0E0E0"
                    android:hint="@string/s_activity_newcourse_professorNameField"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:inputType="textPersonName"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_newcourse_buildingNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_newCourse_buildingName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#E0E0E0"
                    android:hint="@string/s_activity_newcourse_buildingNameField"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_newcourse_roomNumberWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_newCourse_roomNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#E0E0E0"
                    android:hint="@string/s_activity_newcourse_roomNumberField"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <Button
                    android:id="@+id/activity_newcourse_daysButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:minHeight="40dp"
                    android:onClick="setMeetingDays"
                    android:text="@string/s_activity_newcourse_courseDaysField"
                    android:textAlignment="textStart"
                    android:textColor="#909090"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#E0E0E0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:minHeight="40dp"
                    android:text="@string/s_activity_newcourse_timeField"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/activity_newcourse_startTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="setTime"
                    android:text="@string/s_activity_newcourse_startTimeField" />

                <Button
                    android:id="@+id/activity_newcourse_endTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="setTime"
                    android:text="@string/s_activity_newcourse_endTimeField" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#E0E0E0" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
