<?xml version="1.0" encoding="utf-8"?>
<!-- Created by Nathan Cool -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="edu.iastate.pal.NewNoteActivity">

    <android.support.v7.widget.Toolbar
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:id="@+id/activity_newNote_actionbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <EditText
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/s_activity_newNote_hint_title"
                android:id="@+id/activity_newNote_editText_title"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:background="@drawable/shape_round_button_accent"
                    android:id="@+id/activity_newNote_button_bold"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/s_activity_newNote_buttonLabel_bold"/>

                <Button
                    android:background="@drawable/shape_round_button_accent"
                    android:id="@+id/activity_newNote_button_italics"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/s_activity_newNote_buttonLabel_italic"/>

                <Button
                    android:background="@drawable/shape_round_button_accent"
                    android:id="@+id/activity_newNote_button_underline"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/s_activity_newNote_buttonLabel_underline"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin">

                <View
                    android:background="@color/colorDivider"
                    android:layout_height="2dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"/>

                <EditText
                    android:background="@android:color/transparent"
                    android:hint="@string/s_activity_newNote_hint_content"
                    android:id="@+id/activity_newNote_editText_content"
                    android:inputType="textMultiLine"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
