<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Nathan Cool -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="edu.iastate.pal.MapsDashboardActivity">

    <android.support.v7.widget.Toolbar
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:id="@+id/activity_mapsDashboard_actionbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/s_activity_mapsDashboard_textView_courseManagerMap_title"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/activity_mapsDashboard_textView_courseManagerMap_title_textSize"
                android:textStyle="bold"/>

            <View
                android:layout_height="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/s_activity_mapsDashboard_textView_courseManagerMap_description"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/activity_mapsDashboard_textView_courseManagerMap_description_textSize"/>

            <View
                android:layout_height="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"/>

            <Button
                android:background="@drawable/shape_round_button_accent"
                android:id="@+id/activity_maps_dashboard_button_launch_courseLocator"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/s_activity_mapsDashboard_button_launch_map"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
